[workspace]
resolver = "2"
members = [
    "ink-test",
    "price_feed",
    "psp_pendulum",
]

[profile.release]
overflow-checks = false
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[profile.dev]
inherits = "release"