[package]
name = "ink-test"
version = "1.6.0"
authors = ["Pendulum"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
runtime-common = { git = "https://github.com/pendulum-chain/pendulum", default-features = false, rev = "da7dcfc6aeae0c743e472a6c424cf80b939dc07d"}

# u256
ethnum = { version = "1", features = ["macros"] }
primitive-types = {  version = "0.12.1", default-features = false, features = ["scale-info"] }

# imported to resolve global allocator conflict
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }

[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "runtime-common/std",
    "primitive-types/std",
]
ink-as-dependency = []
e2e-tests = []
