[package]
name = "price_feed"
version = "0.1.0"
authors = ["Pendulum"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
runtime-common = { git = "https://github.com/pendulum-chain/pendulum", default-features = false, rev = "7e74e027a04443fc7c7ec7ff6ccefc97546f910e"}

# imported to resolve global allocator conflict
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }

[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "runtime-common/std",
]
ink-as-dependency = []
e2e-tests = []
